# rust_service_wrapper

./: Cargo.toml  README.md
src/: main.rs  script.ps1
