[package]
name = "service_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powershell_script = "1.1.0"
serde = "1.0.200"
serde_derive = "1.0.200"
toml = "0.8.12"
win-service-logger = "0.1.1"
windows-service = "0.7.0"
